run script to capture stdout logs